# scopus-for-dobby

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
.omc/plans/: gui-implementation-plan.md
.omc/specs/: deep-interview-gui-implementation.md
docs/: GUI_IMPLEMENTATION.md  design-spec-for-designer.md
gui-macos/: .gitignore  README.md  project.yml
gui-macos/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
gui-macos/Sources/: AppState.swift  DaemonLauncher.swift  ScopusForDobbyApp.swift  Theme.swift
gui-macos/Sources/HTTP/: DaemonClient.swift
gui-macos/Sources/Models/: Article.swift  CollectionInfo.swift  EventModel.swift
gui-macos/Sources/Views/: ArticleDetailView.swift  ArticleListView.swift  BatchPanel.swift  CollectionsSidebar.swift  ContentView.swift  ErrorToast.swift  Sheets.swift
gui-macos/Tests/: ArticleDecodingTests.swift  CollectionDecodingTests.swift  DaemonClientLogicTests.swift  EventDecodingTests.swift
scopus_for_dobby/: __init__.py  __main__.py  cli.py
scopus_for_dobby/cli/: __init__.py  __main__.py  _client.py  _daemon.py  _output.py  _state.py  auth.py  author.py  collection.py  db.py  export.py  repl.py  search.py  serve.py
scopus_for_dobby/core/: abstract.py  article_db.py  auth.py  export.py  search.py  session.py
scopus_for_dobby/server/: __init__.py  app.py
scopus_for_dobby/utils/: api_client.py  repl_skin.py
spikes/duckdb_mvcc/: REPORT.md  bench_http_vs_inproc.py  fts_probe.py  python_reader.py  python_writer.py  run_spike.py
tests/: conftest.py  test_authors.py  test_cli_json.py  test_conn_lifecycle.py  test_core.py  test_daemon_guard.py  test_events.py  test_export_formats.py  test_fts.py  test_schema_fingerprint.py  test_search.py  test_server.py
tests/fixtures/: schema_fingerprint.txt
